<->
8 мая наш мини-альбом выходит на нетлейбле <a href="http://blocsonic.com" title="blocSonic" />blocSonic</a> - отличном ресурсе с великолепными релизами, расположенным в штате Мэн, США. Мы рады, что наша музыка нравится людям не только в России!