@@ -1,2 +1,4 @@
 <->
+Finally we there! Netlabel <a href="http://blocsonic.com" title="blocSonic">blocSonic</a> released our mini-album! You can view and download album with great booklet and cover art <a href="http://blocsonic.com/releases/show/gryaznyj-albom" title="blocSonic release">here</a>.
+<->
 We're release our mini album on 8 of May at <a href="http://blocsonic.com" title="blocSonic" />blocSonic</a> - great netlabel full of super Creative Commons licensed music, located in Maine, USA
