@@ -33,8 +33,8 @@ div.ywp-common-tooltip {display:none;}
             <li><a href="./audio/dovesok.mp3" title="Довесок">Довесок</a></li>
             <li><a href="./audio/bespontovy_remix.mp3" title="Беспонтовы (ремикс)">Беспонтовы &lt;дискотека-ремикс&gt;</a></li>
             </br>
-            <li><a href="./audio/vpopolam_gryaznyj_albom.zip" title="Альбом в формате MP3 (около 30 Мб)">Скачать альбом в MP3</a></li>
-            <li><a href="http://depositfiles.com/files/71sskpvhd" title="Альбом в lossless-формате FLAC (около 130 Мб)">Скачать альбом в FLAC &lt;depositfiles&gt;</a></li>          
+            <li><a href="./audio/vpopolam_gryaznyj_albom.zip" title="Альбом в формате MP3 (около 30 Мб)">Скачать альбом в MP3</a><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="border-width:0; margin-left: 10px;" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a></li>
+            <li><a href="http://depositfiles.com/files/71sskpvhd" title="Альбом в lossless-формате FLAC (около 130 Мб)">Скачать альбом в FLAC &lt;depositfiles&gt;</a><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="border-width:0; margin-left: 10px;" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a></li>          
          </ul>
 <div id="photo">
     <h1>Фотографии</h1>
