@@ -1,2 +1,4 @@
 <->
+Ура! Нетлейбл <a href="http://blocsonic.com" title="blocSonic">blocSonic</a> выпустил наш мини альбом! Просмотреть и загрузить его вместе с превосходным буклетом и обложкой в трёх вариантах &lt;английском/русском/транслите&gt; можно по <a href="http://blocsonic.com/releases/show/gryaznyj-albom" title="blocSonic release">этому</a> адресу.
+<->
 8 мая наш мини-альбом выходит на нетлейбле <a href="http://blocsonic.com" title="blocSonic" />blocSonic</a> - отличном ресурсе с великолепными релизами, расположенным в штате Мэн, США. Мы рады, что наша музыка нравится людям не только в России!
